// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapContainer should render 1`] = `
<div
  className="qa-map"
>
  <div
    className="c-map c-map--drawing-mode-none qa-map-container"
  >
    <Connect(LeafletContainer)
      getLeafletInstance={[Function]}
    />
    <ToggleFullscreen
      alignLeft={false}
      isFullscreen={false}
      onToggleFullscreen={[Function]}
      title="Kaart"
    />
    <section
      className="bottom-left"
    >
      <Connect(MapPanel)
        isMapPanelVisible={true}
      />
    </section>
  </div>
</div>
`;

exports[`MapContainer should render with drawingmode: draw 1`] = `
<div
  className="qa-map"
>
  <div
    className="c-map c-map--drawing-mode-draw qa-map-container"
  >
    <Connect(LeafletContainer)
      getLeafletInstance={[Function]}
    />
    <ToggleFullscreen
      alignLeft={false}
      isFullscreen={false}
      onToggleFullscreen={[Function]}
      title="Kaart"
    />
    <section
      className="bottom-left"
    >
      <Connect(MapPanel)
        isMapPanelVisible={true}
      />
    </section>
  </div>
</div>
`;
